@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform{
}


class Organization {
  -String name
  -String email
  -String nif
}

class Collaborator{
  -String nameC
  -String emailC
  -String role
}

class Task {
  -String idTask
  -String description
  -int timeTask
  -double costHour
  -String taskCategory
  -boolean isPayed
  -boolean isFinished
}



class User {
}



Platform "1" -- "1..*" Organization: has registered >


Organization "1" -- "1" Collaborator: has >
Organization "1" -- "1..*" Task: has >



Collaborator "1" -- "1..*" Task: creates >

Collaborator "1" -- "1" User: acts as >










@enduml
